Added vivisection recipe type